Añadida la foto de contactos

--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-
+        <img src="./images/contacto.jpg" alt="Fruteria Lola">
     </main> 
 </body>
 </html>
